# server/openapi_server/models/codes_codes_obj.py
@@ -1,0 +1,116 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class CodesCodesObj(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, concept=None, code=None, sab=None):  # noqa: E501
+        """CodesCodesObj - a model defined in OpenAPI
+
+        :param concept: The concept of this CodesCodesObj.  # noqa: E501
+        :type concept: str
+        :param code: The code of this CodesCodesObj.  # noqa: E501
+        :type code: str
+        :param sab: The sab of this CodesCodesObj.  # noqa: E501
+        :type sab: str
+        """
+        self.openapi_types = {
+            'concept': str,
+            'code': str,
+            'sab': str
+        }
+
+        self.attribute_map = {
+            'concept': 'concept',
+            'code': 'code',
+            'sab': 'SAB'
+        }
+
+        self._concept = concept
+        self._code = code
+        self._sab = sab
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'CodesCodesObj':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The CodesCodesObj of this CodesCodesObj.  # noqa: E501
+        :rtype: CodesCodesObj
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def concept(self):
+        """Gets the concept of this CodesCodesObj.
+
+
+        :return: The concept of this CodesCodesObj.
+        :rtype: str
+        """
+        return self._concept
+
+    @concept.setter
+    def concept(self, concept):
+        """Sets the concept of this CodesCodesObj.
+
+
+        :param concept: The concept of this CodesCodesObj.
+        :type concept: str
+        """
+
+        self._concept = concept
+
+    @property
+    def code(self):
+        """Gets the code of this CodesCodesObj.
+
+
+        :return: The code of this CodesCodesObj.
+        :rtype: str
+        """
+        return self._code
+
+    @code.setter
+    def code(self, code):
+        """Sets the code of this CodesCodesObj.
+
+
+        :param code: The code of this CodesCodesObj.
+        :type code: str
+        """
+
+        self._code = code
+
+    @property
+    def sab(self):
+        """Gets the sab of this CodesCodesObj.
+
+
+        :return: The sab of this CodesCodesObj.
+        :rtype: str
+        """
+        return self._sab
+
+    @sab.setter
+    def sab(self, sab):
+        """Sets the sab of this CodesCodesObj.
+
+
+        :param sab: The sab of this CodesCodesObj.
+        :type sab: str
+        """
+
+        self._sab = sab
